<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ranjeet.sharedpreferenceapps.MainActivity1">

        <EditText
            android:id="@+id/name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"/>

        <EditText
            android:id="@+id/age_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age_hint"/>

    <Button
        android:id="@+id/save_preference_button"
        android:text="@string/save_shared_preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/restore_preference_button"
        android:text="@string/restore_shared_preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/save_default_preference_button"
        android:text="@string/save_def_shared_preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/restore_default_preference_button"
        android:text="@string/restore_def_shared_preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>
